--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header img{
     width: 600px;
     height: 350px;
 }
-@media  (min-width:480px){
+@media all (min-width:480px){
     .bottom-card-right img{
         width: 200px;
         height: 100px;
